Add - working project links

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -79,6 +79,14 @@ a:link {
   border-top: 3px solid rgb(219, 219, 219);
 }
 
+.subtitle {
+  font-size: 0.9em;
+}
+
+.customH3 a{
+  color: inherit;
+}
+
 .footer {
   font-family: computerModernItalic, sans-serif;
   font-size: 0.7em;
