--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -48,6 +48,12 @@ a:link {
   text-align: center;
   border-top: 3px solid #dbdbdb; }
 
+.subtitle {
+  font-size: 0.9em; }
+
+.customH3 a {
+  color: inherit; }
+
 .footer {
   font-family: computerModernItalic, sans-serif;
   font-size: 0.7em;
