--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6102,9 +6102,29 @@ a.text-dark:hover, a.text-dark:focus {
 @media (max-width: 1199.98px) {
   #job-title {
     font-family: PressStart2P, cursive;
-    font-size: 2em; } }
+    font-size: 2em; }
+  #mainBody {
+    font-size: 0.8em; }
+  .customH3 {
+    font-size: 1.7rem; }
+  .rounded {
+    width: 200px; }
+  #navBrandName {
+    font-size: 1.2rem; }
+  .footer {
+    font-size: 0.6em; } }
 
 @media (max-width: 767.98px) {
   #job-title {
     font-family: PressStart2P, cursive;
-    font-size: 1.5em; } }
+    font-size: 1.5em; }
+  #mainBody {
+    font-size: 0.8em; }
+  .customH3 {
+    font-size: 1.7rem; }
+  .rounded {
+    width: 200px; }
+  #navBrandName {
+    font-size: 1.2rem; }
+  .footer {
+    font-size: 0.6em; } }
